mi intro y entrevistas ok

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <h2 class="accordion-header" id="headingOne">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                 aria-expanded="true" aria-controls="collapseOne">
-                SEGUIR LEYENDO...
+                SEGUIR LEYENDO / CERRAR
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
@@ -261,7 +261,7 @@
             <h2 class="accordion-header" id="headingOne">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                 aria-expanded="true" aria-controls="collapseOne">
-                SEGUIR LEYENDO...
+                SEGUIR LEYENDO  / CERRAR
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
@@ -378,11 +378,77 @@
     <section class="secciones container-fluid mt-4 pb-5">
       <h1 class="texto-secundario text-white text-center py-5">REGISTRO DEL SAG DE VIVEROS CON VENTA DE ESPECIES NATIVAS <br>
         REGIONES DEL BÍO-BÍO, LOS RÍOS Y LOS LAGOS</h1>
+        <hr style="width: 20%; margin-left: auto;margin-right:auto; color: aliceblue;" />
+
         <img src="./Images/grafico1Encuesta.svg" alt="Gráfico de viveros con especies nativas en Bío-Bío, Los Ríos y Los Lagos" class="mx-auto d-block w-75 py-5">
-        <a href="https://www.sag.gob.cl/content/nomina-de-viveros-inscritos-en-el-sag-diciembre-2022" target="_blank"><button type="button" class="btn btn-link boton-tabla mx-auto d-block py-3 m-5">IR A TABLA DEL SAG</button></a>
+        <a href="https://www.sag.gob.cl/content/nomina-de-viveros-inscritos-en-el-sag-diciembre-2022" target="_blank"><button type="button" class="btn btn-link bg-light mx-auto d-block py-3 m-5">IR A TABLA DEL SAG</button></a>
     </section>
 
-    <section class="secciones container-fluid mt-4 pb-5"></section>
+    <section class="secciones container-fluid mt-4 pb-5">
+      <h1 class="texto-secundario text-white text-center py-5">RESULTADOS DE LA ENCUESTA A PARTICULARES <br>
+        INTERESADOS EN LA RESTAURACIÓN DE BOSQUES NATIVOS</h1>
+        <hr style="width: 20%; margin-left: auto;margin-right:auto; color: aliceblue;" />
+        <div class="container preguntas pt-3 pb-1 mt-5">
+          <p class="texto-pregunta">¿Cuál es su experiencia y/o interés en la restauración de ecosistemas boscosos?</p>
+        </div>
+        <ol class="texto-parrafo text-white m-5">
+          <li>Tengo experiencia en participación en campañas de plantacion de bosques nativos.
+          </li>
+          <li>Básica, siempre he vivido en el campo, trabajando mi campo.
+          </li>
+          <li>Tengo una parcela que la tengo en conservacion y está rodeada de empresas forestales con eucaliptus y pino. Comencé a plantar nativos en un humedal y comenzó a llegar el agua. He platado más 2 mil árboles nativos.</li>
+          <li>No mucha, sí tengo plantaciones de murtilla y calafate en mi jardín.
+          </li>
+          <li>He plantado árboles, pero sin conocimientos y no me ha resultado mucho. Por eso hice un curso para emprendimientos en la restauracion de ecosistemas boscosos.
+          </li>
+          <li>Yo soy geógrafo y doctor en ciencias biológicas. Trabajo como jefe de la carrera Manejo de Áreas Silvestres Protegidas del IDMA y para el programa de Naciones Unidas en el marco de un proyecto internacional, llamado "Restaurando la Esperanza" de 5 países y Chile es uno de los países piloto. Estoy contratado como asesor para investigar prioridades de restauración ecológica. Tenemos metas para el 2050: 1 millón de hectáreas asociadas a obras de restauración ecóligica como país. Están directamente viculado con REDD+, porque son objetivos como país y el marco rector es el programa de restauración ecológica a escala de paisaje.
+          </li>
+          <li>No sé mucho de esto. Mi interés es aprender sobre los nombres de los árboles nativos para qué sirven y cómo reproducirlos.
+          </li>
+          <li>Porque si desaparecen los árboles, el clima no va a poder más, son buenos para un mejor medio ambiente.
+          </li>
+          <li>No tengo experiencia. Estoy haciendo el curso sobre la restauración, porque vivo en el campo y obviamente por el daño al ecosistema quiero aportar en la restauración. Hacemos raleo para leña y vamos restaurando de las patillas de ahí mismo.
+          </li>
+          <li>El curso que hicimos, me gustó porque aprendí varias cosas, cómo rescatar arbolitos nativos, por ejemplo el mosqueto, yo trabajo en eso y cómo se utiliza para hacer tierra orgánica, por ejemplo, trabajo con frutillas orgánicas y les popongone abono orgánica, y esto se rescata de debajo de los árboles, las hojas que botan, especialmente, del árbol nativo y ayudan a descontaminar el aire, a uno mismo y a los polinizadores. Aquí donde vivo todo es nativo, en Pupunahue, vivo cerca de la ruta 5 sur, son como 5 hectáreas. Porque somos familias antiguas y no queremos que se instalen forestales y boten los árboles nativos. La leña la sacamos de los árboles que caen o están muy viejos y quedan los renuevos.
+          </li>
+          <li>Yo vivo en el campo, en la comuna de Mafil, y aquí tenemos 3 hectáreas de bosques nativos. Evitamos la destrucción de los nuevos arbolitos por los animales y tratmos de manipular lo menos posible ese bosque.
+          </li>
+          <li>Yo soy profesor en gestión educativa y tengo unas tierras en la isla de Quihua, por lo tanto, también soy agricultor. Con mi padre, sembramos plantas agrícolas de forma orgánica y quiero aprender a plantar árboles nativos y tratar de manejar el bosque sustentablemente. Hice varios cursos: compostaje, agricultura orgánica y restauración de ecosistemas boscosos. Con la Municipalidad de Puerto Montt y su vivero, hemos pedido arbolitos para plantar con los alumnos, porque fui coordinador de Educación intercultural bilingüe, de 40 escuelas rurales. Actualmente, trabajo como asesor técnico pedagógico.
+          </li>
+          <li>He realizado proyectos de restauración en la Región Metropolitana y Quinta Costa, mediante mi consultora Xilema Educación.
+          </li>
+        </ol>
+        <div class="container preguntas pt-3 pb-1 mt-5">
+          <p class="texto-pregunta">¿Cuál es su experiencia y/o interés en la restauración de ecosistemas boscosos?</p>
+        </div>
+        <ol class="texto-parrafo text-white m-5">
+          <li>Tengo experiencia en participación en campañas de plantacion de bosques nativos.
+          </li>
+          <li>Básica, siempre he vivido en el campo, trabajando mi campo.
+          </li>
+          <li>Tengo una parcela que la tengo en conservacion y está rodeada de empresas forestales con eucaliptus y pino. Comencé a plantar nativos en un humedal y comenzó a llegar el agua. He platado más 2 mil árboles nativos.</li>
+          <li>No mucha, sí tengo plantaciones de murtilla y calafate en mi jardín.
+          </li>
+          <li>He plantado árboles, pero sin conocimientos y no me ha resultado mucho. Por eso hice un curso para emprendimientos en la restauracion de ecosistemas boscosos.
+          </li>
+          <li>Yo soy geógrafo y doctor en ciencias biológicas. Trabajo como jefe de la carrera Manejo de Áreas Silvestres Protegidas del IDMA y para el programa de Naciones Unidas en el marco de un proyecto internacional, llamado "Restaurando la Esperanza" de 5 países y Chile es uno de los países piloto. Estoy contratado como asesor para investigar prioridades de restauración ecológica. Tenemos metas para el 2050: 1 millón de hectáreas asociadas a obras de restauración ecóligica como país. Están directamente viculado con REDD+, porque son objetivos como país y el marco rector es el programa de restauración ecológica a escala de paisaje.
+          </li>
+          <li>No sé mucho de esto. Mi interés es aprender sobre los nombres de los árboles nativos para qué sirven y cómo reproducirlos.
+          </li>
+          <li>Porque si desaparecen los árboles, el clima no va a poder más, son buenos para un mejor medio ambiente.
+          </li>
+          <li>No tengo experiencia. Estoy haciendo el curso sobre la restauración, porque vivo en el campo y obviamente por el daño al ecosistema quiero aportar en la restauración. Hacemos raleo para leña y vamos restaurando de las patillas de ahí mismo.
+          </li>
+          <li>El curso que hicimos, me gustó porque aprendí varias cosas, cómo rescatar arbolitos nativos, por ejemplo el mosqueto, yo trabajo en eso y cómo se utiliza para hacer tierra orgánica, por ejemplo, trabajo con frutillas orgánicas y les popongone abono orgánica, y esto se rescata de debajo de los árboles, las hojas que botan, especialmente, del árbol nativo y ayudan a descontaminar el aire, a uno mismo y a los polinizadores. Aquí donde vivo todo es nativo, en Pupunahue, vivo cerca de la ruta 5 sur, son como 5 hectáreas. Porque somos familias antiguas y no queremos que se instalen forestales y boten los árboles nativos. La leña la sacamos de los árboles que caen o están muy viejos y quedan los renuevos.
+          </li>
+          <li>Yo vivo en el campo, en la comuna de Mafil, y aquí tenemos 3 hectáreas de bosques nativos. Evitamos la destrucción de los nuevos arbolitos por los animales y tratmos de manipular lo menos posible ese bosque.
+          </li>
+          <li>Yo soy profesor en gestión educativa y tengo unas tierras en la isla de Quihua, por lo tanto, también soy agricultor. Con mi padre, sembramos plantas agrícolas de forma orgánica y quiero aprender a plantar árboles nativos y tratar de manejar el bosque sustentablemente. Hice varios cursos: compostaje, agricultura orgánica y restauración de ecosistemas boscosos. Con la Municipalidad de Puerto Montt y su vivero, hemos pedido arbolitos para plantar con los alumnos, porque fui coordinador de Educación intercultural bilingüe, de 40 escuelas rurales. Actualmente, trabajo como asesor técnico pedagógico.
+          </li>
+          <li>He realizado proyectos de restauración en la Región Metropolitana y Quinta Costa, mediante mi consultora Xilema Educación.
+          </li>
+        </ol>
+    </section>
   </main>
 
   <footer id="footer" class="text-center py-5">
