nuevos id en sass

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="./dist/style.css">
 </head>
 
-<body>
+<body id="body">
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="logo-container container-fluid">
       <a class="navbar-brand" href="#">
@@ -424,7 +424,7 @@
             <h2 class="accordion-header" id="headingOne">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne1"
                 aria-expanded="true" aria-controls="collapseOne">
-                <p class="texto-pregunta">
+                <p id="texto-pregunta">
                   ¿Cuál es su experiencia y/o interés en la restauración de ecosistemas boscosos?
                 </p>
               </button>
@@ -493,7 +493,7 @@
             <h2 class="accordion-header" id="headingTwo">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne2"
                 aria-expanded="true" aria-controls="collapseOne2">
-                <p class="texto-pregunta">
+                <p id="texto-pregunta">
                   ¿Ha colaborado con empresas locales en la ejecución de proyectos de restauración de ecosistemas?
                 </p>
               </button>
@@ -542,7 +542,7 @@
             <h2 class="accordion-header" id="headingThree">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne3"
                 aria-expanded="true" aria-controls="collapseOne3">
-                <p class="texto-pregunta">
+                <p id="texto-pregunta">
                   En términos de oportunidades, seleccione 3 temas específicos que considera prioritarios dentro de la
                   restauración de ecosistemas:
                 </p>
@@ -551,7 +551,7 @@
             <div id="collapseOne3" class="accordion-collapse collapse show" aria-labelledby="headingThree"
               data-bs-parent="#accordionExample3">
               <div class="accordion-body">
-                <ul class="texto-pregunta">
+                <ul id="texto-pregunta">
                   <li>Restauración de bosques de araucaria.</li>
                   <li>Restauración de ecosistemas que ayuden para ayudar en la adaptación al cambio climático.</li>
                   <li>Restauración de suelos degradados debido a prácticas forestales, agrícolas o mineras.</li>
@@ -572,7 +572,7 @@
             <h2 class="accordion-header" id="headingFour">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne4"
                 aria-expanded="true" aria-controls="collapseOne4">
-                <p class="texto-pregunta">
+                <p id="texto-pregunta">
                   Basado en su experiencia, ¿cómo percibe la relación entre los diferentes actores que participan en
                   proyectos de restauración? Califique del 1 al 7, donde 1 es muy mala y 7 es muy buena:
                 </p>
@@ -594,7 +594,7 @@
             <h2 class="accordion-header" id="headingFive">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne5"
                 aria-expanded="true" aria-controls="collapseOne5">
-                <p class="texto-pregunta">
+                <p id="texto-pregunta">
                   ¿Qué se puede hacer para que la comunicación y relación sea más efectiva entre los diferentes actores
                   de proyectos de restauración?
                 </p>
