cambio img logo footer

--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
           target="_blank"> <i class="fab fa-whatsapp color-enlaces"></i>
           +56994404516</a></p>
       <p class="texto-footer">Fecha de hoy: <span id="fecha-actual"></span></p>
-      <img src="./Images/diseñoWeb.svg" alt="Logo diseñadora web" id="logo-diseño">
+      <img src="./Images/logoWeb.png" alt="Logo diseñadora web" id="logo-diseño">
     </section>
 
   </footer>
