corecciones en titulos

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             comunes y corrientes que ven en este mercado una posibilidad de iniciar una actividad de
             emprendimiento con objetivos lucrativos y también altruistas de conservación ambiental.
           </p>
-          <h4 class="texto-secundario text-white ms-2 my-5">OBJETIVOS DEL ESTUDIO</h4>
+          <h4 class="texto-secundario text-white ms-2 my-5">OBJETIVO GENERAL DEL ESTUDIO</h4>
           <p class="texto-parrafo color-blanco ms-2">
             Identificar las oportunidades y limitaciones que confrontan los potenciales emprendedores y
             actores existentes en el mercado de la restauración de ecosistemas boscosos en las regiones de
@@ -642,7 +642,7 @@
       </div>
     </section>
 
-    <section class="secciones container-fluid mt-1 pb-5">
+    <section id="especies" class="secciones container-fluid mt-1 pb-5">
       <div class="mb-5 mx-1">
         <h4 class="texto-secundario text-white text-center ms-2 pt-5 pb-3">VENTA DE ESPECIES NATIVAS</h4>
         <hr style="width: 50%; margin-left: auto;margin-right:auto; color: aliceblue;" />
@@ -671,9 +671,9 @@
       </div>
     </section>
 
-    <section class="secciones container-fluid mt-1 pb-5">
+    <section id="semillas" class="secciones container-fluid mt-1 pb-5">
       <div class="mb-5 mx-1">
-        <h4 class="texto-secundario text-white text-center ms-2 pt-5 pb-3">VENTA DE SEMILLAS ESPECIES NATIVAS</h4>
+        <h4 class="texto-secundario text-white text-center ms-2 pt-5 pb-3">VENTA DE SEMILLAS DE ESPECIES NATIVAS</h4>
         <hr style="width: 50%; margin-left: auto;margin-right:auto; color: aliceblue;" />
         <img src="./Images/graficoSemillasVenta.svg" alt="Gráfico venta de semillas nativas"
           class="mx-auto d-block w-50 pt-5">
@@ -699,7 +699,7 @@
       </div>
     </section>
 
-    <section id="especies" class="secciones container-fluid mt-1 pb-5">
+    <section class="secciones container-fluid mt-1 pb-5">
       <h4 class="texto-secundario text-white text-center text-uppercase ms-2 pt-5 pb-3">Precios de venta de<br>especies
         nativas, septiembre de 2023</h4>
       <hr style="width: 40%; margin-left: auto;margin-right:auto; color: aliceblue;" />
@@ -707,7 +707,7 @@
         class="mx-auto d-block py-5">
     </section>
 
-    <section id="semillas" class="secciones container-fluid mt-1 pb-5">
+    <section  class="secciones container-fluid mt-1 pb-5">
       <h4 class="texto-secundario text-white text-center text-uppercase ms-2 pt-5 pb-3">Precios de venta de<br>semillas
         de especies nativas, septiembre de 2023</h4>
       <hr style="width: 40%; margin-left: auto;margin-right:auto; color: aliceblue;" />
