--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"><i  id="menu-nav" class="fas fa-bars mt-2"></i></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-list navbar-nav ms-auto">
@@ -98,7 +98,7 @@
             restauración en estas regiones durante dicho periodo
           </p>
         </div>
-        <div class="col-6">
+        <div class="img-container col-6">
           <img src="./Images/tronco.png" alt="Bosque Nativo" class="py-5 ps-5 ms-5 mt-3">
         </div>
       </div>
@@ -106,7 +106,7 @@
 
     <section id="entrevistas" class="secciones container-fluid mt-1">
       <div class="row py-5">
-        <div class="col-5">
+        <div class="img-troppa col-5">
           <img src="./Images/Troppa.png" alt="Constanza Troppa, Conaf">
         </div>
         <div class="col-7">
@@ -246,9 +246,8 @@
             algunos independientes, otros académicos de universidades.
           </p>
         </div>
-        <div class="col-5">
+        <div class="img-mininco col-5">
           <img src="./Images/Mininco.png" alt="Vivero Carlos Douglas de Forestal Mininco" width="90%">
-          <p class="texto-parrafo text-white my-3">Imagen: Vivero Carlos Douglas de Forestal Mininco</p>
         </div>
       </div>
 
@@ -365,6 +364,8 @@
                 <p class="texto-parrafo text-dark">
                   Sí, yo creo...
                 </p>
+                <!-- <p class="text-secondary my-3" style="font-style: italic; font-size: 12px;">La imagen lateral corresponde al Vivero Carlos Douglas de Forestal Mininco</p> -->
+
               </div>
             </div>
           </div>
@@ -559,7 +560,9 @@
                   <li>Recolección de semillas de especies nativas.</li>
                   <li>Restauración y creación de viveros especializados en especies nativas.</li>
                 </ul>
-                <img src="./Images/grafico3Encuesta.svg" alt="Gráfico de encuesta">
+                <div class="img-grafico3-encuesta">
+                  <img src="./Images/grafico3Encuesta.svg" alt="Gráfico de encuesta">
+                </div>
               </div>
             </div>
           </div>
@@ -581,7 +584,9 @@
             <div id="collapseOne4" class="accordion-collapse collapse show" aria-labelledby="headingFour"
               data-bs-parent="#accordionExample4">
               <div class="accordion-body">
-                <img src="./Images/grafico2Encuesta.svg" alt="Gráfico de encuesta">
+                <div class="img-grafico2-encuesta">
+                  <img src="./Images/grafico2Encuesta.svg" alt="Gráfico de encuesta">
+                </div>
               </div>
             </div>
           </div>
@@ -651,10 +656,9 @@
           class="mx-auto d-block w-50 mt-5">
       </div>
       <div class="row">
-        <div class="col-6 my-5 ms-5">
+        <div id="imgEspecies" class="col-6 my-5 ms-5">
           <img src="./Images/imgEspecies.png" alt="Imagen de semillas" class="mb-3 w-75">
           <img src="./Images/imgEspecies2.png" alt="Imagen de semillas" class="w-75">
-
         </div>
         <div class="col-5 my-5">
           <table id="tabla" class="table text-white">
@@ -679,7 +683,7 @@
           class="mx-auto d-block w-50 pt-5">
       </div>
       <div class="row">
-        <div class="col-6 my-5 ms-5">
+        <div id="imgSemillas" class="col-6 my-5 ms-5">
           <img src="./Images/imgSemillas.png" alt="Imagen de semillas" class="mb-3 w-75">
           <img src="./Images/imgSemillas2.png" alt="Imagen de semillas" class="w-75">
 
@@ -703,16 +707,20 @@
       <h4 class="texto-secundario text-white text-center text-uppercase ms-2 pt-5 pb-3">Precios de venta de<br>especies
         nativas, septiembre de 2023</h4>
       <hr style="width: 40%; margin-left: auto;margin-right:auto; color: aliceblue;" />
-      <img src="./Images/graficosPreciosEspeciesNativasVenta.svg" alt="Gráfico Precios Especies Nativas"
-        class="mx-auto d-block py-5">
+      <div class="graficos-precios-especies">
+        <img src="./Images/graficosPreciosEspeciesNativasVenta.svg" alt="Gráfico Precios Especies Nativas"
+          class="mx-auto d-block py-5">
+      </div>
     </section>
 
-    <section  class="secciones container-fluid mt-1 pb-5">
+    <section class="secciones container-fluid mt-1 pb-5">
       <h4 class="texto-secundario text-white text-center text-uppercase ms-2 pt-5 pb-3">Precios de venta de<br>semillas
         de especies nativas, septiembre de 2023</h4>
       <hr style="width: 40%; margin-left: auto;margin-right:auto; color: aliceblue;" />
-      <img src="./Images/graficosPreciosSemillasNativasVenta.svg" alt="Gráfico Precios Especies Nativas"
-        class="mx-auto d-block py-5">
+      <div class="graficos-precios-semillas">
+        <img src="./Images/graficosPreciosSemillasNativasVenta.svg" alt="Gráfico Precios Especies Nativas"
+          class="mx-auto d-block py-5">
+      </div>
     </section>
   </main>
 
@@ -734,6 +742,9 @@
     </section>
 
   </footer>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@2.11.6/dist/umd/popper.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
