ajustes de textos para responsive

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"><i  id="menu-nav" class="fas fa-bars mt-2"></i></span>
+        <span class="navbar-toggler-icon"><i id="menu-nav" class="fas fa-bars mt-2"></i></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-list navbar-nav ms-auto">
@@ -57,7 +57,7 @@
 
     <section class="secciones container-fluid">
       <div class="row">
-        <div class="col-6 px-3">
+        <div id="introduction" class="col-12 col-md-6 px-3">
           <h1 class="introduccion texto-secundario color-blanco my-5 ms-2">INTRODUCCIÓN</h1>
           <p class="texto-parrafo color-blanco ms-2">Al hablar de restauración de ecosistemas boscosos se hace
             referencia a la intención de recuperar
@@ -109,7 +109,7 @@
         <div class="img-troppa col-5">
           <img src="./Images/Troppa.png" alt="Constanza Troppa, Conaf">
         </div>
-        <div class="col-7">
+        <div class="col-12 col-md-7">
           <h4 class="texto-secundario text-white mb-5">CONSTANZA TROPPA TAPIA<br>GERENTE DE CONSERVACIÓN DE
             ECOSISTEMAS<br>BOSCOSOS Y CAMBIO CLIMÁTICO DE CONAF</h4>
           <p class="texto-parrafo">En Conaf, tenemos 3 tipos de iniciativas, orientadas a la recuperación del ecosistema
@@ -222,7 +222,7 @@
         </div>
       </div>
       <div class="row py-5">
-        <div class="col-7">
+        <div class="col-12 col-md-7">
           <h4 class="texto-secundario text-white mb-4">ALAMIRO GASPAR NAVARRETE GUERRA
             <br>INGENIERO RESTAURACIÓN Y ESTUDIO
             <br>AMBIENTAL DE FORESTAL MININCO S.A.
@@ -433,7 +433,7 @@
             <div id="collapseOne1" class="accordion-collapse collapse show" aria-labelledby="headingOne"
               data-bs-parent="#accordionExample1">
               <div class="accordion-body">
-                <ol class="texto-parrafo text-dark m-5">
+                <ol class="texto-parrafo text-dark">
                   <li>Tengo experiencia en participación en campañas de plantacion de bosques nativos.</li>
                   <li>Mi experiencia es básica. Yo siempre he vivido en el campo, así es que mi aporte y experiencia es
                     trabajando mi campo.</li>
@@ -502,7 +502,7 @@
             <div id="collapseOne2" class="accordion-collapse collapse show" aria-labelledby="headingOne"
               data-bs-parent="#accordionExample2">
               <div class="accordion-body">
-                <ol class="texto-parrafo text-dark m-5">
+                <ol class="texto-parrafo text-dark">
                   <li>Sí, con Cultiva.</li>
                   <li>No.</li>
                   <li>Sí, con CONAF, FAO y programa MAS BOSQUES para el cambio climático. Soy dirigente social y donde
@@ -608,7 +608,7 @@
             <div id="collapseOne5" class="accordion-collapse collapse show" aria-labelledby="headingFive"
               data-bs-parent="#accordionExample5">
               <div class="accordion-body">
-                <ol class="texto-parrafo text-dark m-5">
+                <ol class="texto-parrafo text-dark">
                   <li>Yo creo que tiene que haber un mandato del estado. Falta responsabilidad estatal.</li>
                   <li>Como son proyectos que duran un tiempo corto, yo creo que falta un ente u organismo que trabaje
                     largo plazo.</li>
