ajustes para responsive tablet

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <section class="secciones container-fluid">
       <div class="row">
-        <div id="introduction" class="col-12 col-md-6 px-3">
+        <div id="introduction" class="col-12 col-lg-6 px-3">
           <h1 class="introduccion texto-secundario color-blanco my-5 ms-2">INTRODUCCIÓN</h1>
           <p class="texto-parrafo color-blanco ms-2">Al hablar de restauración de ecosistemas boscosos se hace
             referencia a la intención de recuperar
@@ -109,7 +109,7 @@
         <div class="img-troppa col-5">
           <img src="./Images/Troppa.png" alt="Constanza Troppa, Conaf">
         </div>
-        <div class="col-12 col-md-7">
+        <div class="col-12 col-lg-7">
           <h4 class="texto-secundario text-white mb-5">CONSTANZA TROPPA TAPIA<br>GERENTE DE CONSERVACIÓN DE
             ECOSISTEMAS<br>BOSCOSOS Y CAMBIO CLIMÁTICO DE CONAF</h4>
           <p class="texto-parrafo">En Conaf, tenemos 3 tipos de iniciativas, orientadas a la recuperación del ecosistema
@@ -222,7 +222,7 @@
         </div>
       </div>
       <div class="row py-5">
-        <div class="col-12 col-md-7">
+        <div class="col-12 col-lg-7">
           <h4 class="texto-secundario text-white mb-4">ALAMIRO GASPAR NAVARRETE GUERRA
             <br>INGENIERO RESTAURACIÓN Y ESTUDIO
             <br>AMBIENTAL DE FORESTAL MININCO S.A.
