incorporacion de link a excel en precios especies y semillas

--- a/index.html
+++ b/index.html
@@ -706,6 +706,12 @@
     <section class="secciones container-fluid mt-1 pb-5">
       <h4 class="texto-secundario text-white text-center text-uppercase ms-2 pt-5 pb-3">Precios de venta de<br>especies
         nativas, septiembre de 2023</h4>
+      <a href="https://docs.google.com/spreadsheets/d/1-l-SRDLe056fzeLYfwqwaTZnxE4DjyDt5OVyrO3wIpY/edit?usp=sharing"
+        target="_blank" rel="noopener noreferrer">
+        <h4 class="text-center text-primary" style="font-family: 'Montserrat', sans-serif; font-size: 12px;">Link a
+          excel</h4>
+      </a>
+
       <hr style="width: 40%; margin-left: auto;margin-right:auto; color: aliceblue;" />
       <div class="graficos-precios-especies">
         <img src="./Images/graficosPreciosEspeciesNativasVenta.svg" alt="Gráfico Precios Especies Nativas"
@@ -716,6 +722,11 @@
     <section class="secciones container-fluid mt-1 pb-5">
       <h4 class="texto-secundario text-white text-center text-uppercase ms-2 pt-5 pb-3">Precios de venta de<br>semillas
         de especies nativas, septiembre de 2023</h4>
+      <a href="  https://docs.google.com/spreadsheets/d/1-l-SRDLe056fzeLYfwqwaTZnxE4DjyDt5OVyrO3wIpY/edit?usp=sharing
+        " target="_blank" rel="noopener noreferrer">
+        <h4 class="text-center text-primary" style="font-family: 'Montserrat', sans-serif; font-size: 12px;">Link a
+          excel</h4>
+      </a>
       <hr style="width: 40%; margin-left: auto;margin-right:auto; color: aliceblue;" />
       <div class="graficos-precios-semillas">
         <img src="./Images/graficosPreciosSemillasNativasVenta.svg" alt="Gráfico Precios Especies Nativas"
@@ -723,7 +734,6 @@
       </div>
     </section>
   </main>
-
   <footer id="footer" class="text-center pb-5">
     <section class="texto-titulo mb-3">
       <a href="https://www.instagram.com/pilargarciahualqui/" target="_blank" rel="noopener noreferrer"><i
@@ -738,7 +748,6 @@
           target="_blank"> <i class="fab fa-whatsapp color-enlaces"></i>
           +56994404516</a></p>
       <p class="texto-footer">Fecha de hoy: <span id="fecha-actual"></span></p>
-      <img src="./Images/logoWeb.png" alt="Logo diseñadora web" id="logo-diseño">
     </section>
 
   </footer>
